# ravm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  README.md  RUSTAVM.md  Sample.cfg  build.rs  docs.cmake
.gitlab/: ci_nightly.yml
ParaKit/: README.md  setup_decoder.sh
aom/: aom_decoder.h  aom_encoder.h  aomcx.h
aom_dsp/: bitreader.h  bitwriter.h  entenc.c  entenc.h  prob.h  txfm_common.h
apps/: aomdec.c  aomenc.c  avmdec.c  avmenc.c
av1/: arg_defs.c  arg_defs.h  av1.cmake  av1_cx_iface.c  av1_dx_iface.c
av2/: arg_defs.c  arg_defs.h  av2.cmake  av2_cx_iface.c  av2_dx_iface.c  exports_ident
avm/: avm_codec.h  avm_encoder.h  avm_frame_buffer.h  avm_image.h  avm_integer.h  avmcx.h  avmdx.h  exports_dec
avm_dsp/: bitreader.h  bitwriter.h  grain_synthesis.c  noise_model.c  prob.h  vmaf.c  vmaf.h
cmake/: avm_config_defaults.cmake  avm_configure.cmake  avm_experiment_deps.cmake  avm_install.cmake  avm_optimization.cmake  compiler_flags.cmake  exports.cmake  generate_avm_config_templates.cmake  generate_exports.cmake  pkg_config.cmake  sanitizers.cmake  version.cmake
common/: args.c  args_helper.c  av2_config.c  obudec.c  obudec.h  tools_common.c
examples/: scalable_encoder.c  simple_decode.rs
fuzz/: Cargo.toml
notes/: FINAL_AUDIT.md  HARDENING_SUMMARY.md  PORTING_PLAN.md  SECURITY_AUDIT.md  TEST_STRATEGY.md  todo_iteration1.md  todo_iteration2.md  todo_iteration3.md  todo_iteration4.md  todo_iteration5.md  todo_iteration6.md
src/: backend.rs  bitstream.rs  decoder.rs  diff.rs  format.rs  ivf.rs  lib.rs  stream.rs
test/: arf_freq_test.cc  (+22 more)
(+324 files in other folders)
